# MCP

./: .gitignore  Dockerfile  README.md  academic_search.py  pyproject.toml  render.yaml  server.py
